USASNGI-529 : Mobile PDP : UPDATE : Updates to fix several issues on mobile pdp

--- a/stylesheets/base/global.less
+++ b/stylesheets/base/global.less
@@ -9,7 +9,8 @@ body {
     background-color: @bodyBackgroundColor;
 	  font-family: @fontFamily;
     font-size: @fontSize;
-	  color: @textColor;
+    color: @textColor;
+    overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
     color: @headingColor;
