--- a/stylesheets/ml/misc.less
+++ b/stylesheets/ml/misc.less
@@ -2411,7 +2411,12 @@ ul.tabs {
             .tab-content {
                 position: relative;
 
-                [class^="tab-content-"] {
+                .tab-content-1,
+                .tab-content-2,
+                .tab-content-3,
+                .tab-content-4,
+                .tab-content-5,
+                .tab-content-6 {
                     &.truncated {
                         position: relative;
                         white-space: nowrap;
@@ -2427,20 +2432,11 @@ ul.tabs {
                             width: 100%;
                             height: 30px;
                             background-image: linear-gradient(to bottom, transparent, #E6E7E8 50%);
+                            background-image: -o-linear-gradient(to bottom, transparent, #E6E7E8 50%);
+                            background-image: -webkit-linear-gradient(to bottom, transparent, #E6E7E8 50%);
+                            background-image: -moz-linear-gradient(to bottom, transparent, #E6E7E8 50%);
                             z-index: 2;
                         }
-
-                        // &:after {
-                        //     content: "";
-                        //     display: block;
-                        //     position: absolute;
-                        //     bottom: 0;
-                        //     left: 0;
-                        //     width: 100%;
-                        //     height: 30px;
-                        //     background-color: #E6E7E8;
-                        //     z-index: 1;
-                        // }
                     }
 
                     &.expanded {
