--- a/stylesheets/modules/product/product-images.less
+++ b/stylesheets/modules/product/product-images.less
@@ -170,11 +170,15 @@
 
 @media @mobile {
     .mobile-carousel {
+        #productmobile-Carousel {
+            display: none;
+        }
 
         #productmobile-Carousel.slick-initialized {
-            width: auto;
-            margin: 0 auto;
-            padding: 0;            
+            display: block;
+            width: 300px;
+            margin: 25px auto 0;
+            padding: 3px;            
             overflow: hidden;
 
             .slick-arrow.fa-angle-left,
@@ -191,7 +195,7 @@
 
                 img {
                     max-height: initial;
-                    width: 100%!important;
+                    width: 295px!important;
                     border: 1px solid #9e9e9e;
                     border-radius: 20px;
                     // border-right: 3px solid white;
@@ -203,7 +207,7 @@
             }
 
             .slick-dots {
-                display: flex;
+                display: flex !important;
                 align-items: center;
                 justify-content: center;
                 margin-top: 13px;
